Makes menu furhter away to avoid it being visible

--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -46,7 +46,7 @@ nav .checkbox {
     right: 0;
     width: 100%;
     height: calc(100vh - 104px);
-    transform: translateX(500px);
+    transform: translateX(1000px);
     transition: transform 0.5s ease-in-out;
     padding: 0px 32px 32px 32px;
 }
